--- a/01-appointment-app/src/app/appointment-list/appointment-list.component.html
+++ b/01-appointment-app/src/app/appointment-list/appointment-list.component.html
@@ -1,12 +1,40 @@
-<div>
-    <input [(ngModel)]="newAppointmentTitle" type="text" placeholder="Enter description">
-    <input [(ngModel)]="newAppointmentDate" type="date" placeholder="Enter date">
-    <button (click)="addAppointment()">Add</button>
-</div>
+<div class="container">
+  <div class="card mt-3">
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">Create new appointment</h2>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-6">
+        <input
+          class="form-control"
+          [(ngModel)]="newAppointmentTitle"
+          type="text"
+          placeholder="Enter description"
+        />
+      </div>
+      <div class="col-md-4">
+        <input
+          class="form-control"
+          [(ngModel)]="newAppointmentDate"
+          type="date"
+          placeholder="Enter date"
+        />
+      </div>
+      <div class="col-md-2">
+        <button class="btn btn-primary w-100" (click)="addAppointment()">
+          Add
+        </button>
+      </div>
+    </div>
+  </div>
 
-<ul>
-    <li *ngFor="let appointment of appointments; index as i">
-        {{ appointment.title }} - {{ appointment.date | date: "dd.MM.yyyy"}}
-        <button (click)="deleteAppointment(i)">Delete</button>
+  <h2 class="text-center nt-5">Appointments</h2>
+  <ul class="list-group mt-3">
+    <li class="list-group-item d-flex justify-content-between" *ngFor="let appointment of appointments; index as i">
+      {{ appointment.title }} - {{ appointment.date | date : "dd.MM.yyyy" }}
+      <button class="btn btn-danger" (click)="deleteAppointment(i)">Delete</button>
     </li>
-</ul>
+  </ul>
+</div>
