Added edit and delete functionality for hotel-app

--- a/02-hotel-app/src/app/reservation-form/reservation-form.component.html
+++ b/02-hotel-app/src/app/reservation-form/reservation-form.component.html
@@ -1,5 +1,6 @@
 <!-- formControlName is required to access those input fields in the reservation-form component so that reactive validation
  can be done on these fields -->
+<app-home></app-home>
 
 <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
     <div>
