--- a/02-hotel-app/src/app/reservation-list/reservation-list.component.html
+++ b/02-hotel-app/src/app/reservation-list/reservation-list.component.html
@@ -1,3 +1,5 @@
+<app-home></app-home>
+
 <div>
     <h2>Reservation List</h2>
 
@@ -8,8 +10,8 @@
             Room Number: {{ reservation.roomNumber }}
             Check-in Date: {{ reservation.checkInDate }}
             Check-out Date: {{ reservation.checkOutDate }}
-            <button>Edit</button>
-            <button>Delete</button>
+            <button [routerLink]="['/edit', reservation.id]">Edit</button>
+            <button (click)="deleteReservation(reservation.id)">Delete</button>
         </li>
     </ul>
 
