--- a/03-animal-paintings/src/app/product/product-list/product-list.component.html
+++ b/03-animal-paintings/src/app/product/product-list/product-list.component.html
@@ -1,13 +1,20 @@
-<div *ngFor="let product of products">
-  <mat-card class="product-card" appearance="outlined">
-    <img
-      mat-card-image
-      src="assets/{{ product.image_url }}"
-      alt="{{ product.name }}"
-    />
-    <mat-card-content>
-      <mat-card-title>{{ product.name }}</mat-card-title>
-      <mat-card-subtitle>{{ product.price | currency: 'USD'}}</mat-card-subtitle>
-    </mat-card-content>
-  </mat-card>
+<div class="container">
+  <h2>Our latest collection</h2>
+  <div class="product-container">
+    <div *ngFor="let product of products">
+      <mat-card class="product-card" appearance="outlined">
+        <img
+          mat-card-image
+          src="assets/{{ product.image_url }}"
+          alt="{{ product.name }}"
+        />
+        <mat-card-content>
+          <mat-card-title>{{ product.name }}</mat-card-title>
+          <mat-card-subtitle>{{
+            product.price | currency : "USD"
+          }}</mat-card-subtitle>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
