--- a/03-animal-paintings/src/app/product/product-list/product-list.component.html
+++ b/03-animal-paintings/src/app/product/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   <h2>Our latest collection</h2>
   <div class="product-container">
     <div *ngFor="let product of products">
-      <mat-card class="product-card" appearance="outlined">
+      <mat-card class="product-card" appearance="outlined" (click)="addToCart(product)">
         <img
           mat-card-image
           src="assets/{{ product.image_url }}"
